# Mobile_Robot_Receptionist

./: README.md
button_localization/: setup.py
button_localization/button_localization/: button_detection.py  button_localization.py  depth_cal.py  line_estimation.py  plane_estimation.py  visualizer_node.py  yolo_node.py
button_localization/config/: depth_cal.rviz
button_localization/launch/: button_localization.launch.py
button_localization/localization/: localization_calculations.ipynb
gazebo_sfm_plugin-galactic/worlds/: button_pannel.world  crowdnav.world  empty_file.world  small_house.world  wall.world
goal_predictor/: setup.py
goal_predictor/goal_predictor/: goal_predictor.py
human_data_buffer/: setup.py
human_data_buffer/human_data_buffer/: data_buffer.py  human_KF_vel.py  human_data_extracter.py  test_data_pub.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
object_tracker/: package.xml  setup.py
object_tracker/object_tracker/: inference_node.py  lidar_subscriber.py  lidar_subscriber_v2.py  lidar_subscriber_v3.py  visualizer.py
realsense_gazebo_plugin/: CMakeLists.txt  package.xml
rosbag2_2025_04_02-17_24_55/: metadata.yaml
smrr_arm_executions/: package.xml  setup.cfg  setup.py
smrr_controller/config/: joy_config.yaml  (+1 more)
smrr_crowdnav/: package.xml  setup.cfg  setup.py
smrr_executions/: CMakeLists.txt  package.xml
smrr_interfaces/: CMakeLists.txt
smrr_interfaces/action/: ArmControlServer.action  NavigateToGoal.action
smrr_interfaces/msg/: Footprint.msg  PrefVelocity.msg
(+301 files in other folders)
